framec_tests/language_specific/csharp/v3_outline/negative/header_outside_section.frm
@target csharp

system S {
    fn Bad() {
        // body
    }
}
